...
  }, [])

  const disabled = watch('email').trim() === ''

  return (
    <Form.MaxWidth>
      <Typo.Title3 {...setTextSemantic('h2')}>Crée-toi un compte</Typo.Title3>
      <ControllersContainer gap={5}>
        <EmailInputController
          label="Adresse e-mail"
          control={control}
          name="email"
          onSpellingHelpPress={onLogHasCorrectedEmail}
        />
        <CheckboxController
          control={control}
          label="J’accepte de recevoir les newsletters, bons plans et les recommandations personnalisées du pass Culture."
          name="marketingEmailSubscription"
        />
      </ControllersContainer>
      <Button
        fullWidth
        wording="Continuer"
...
