...
        url: remoteIllustrationUrls.trashMosaic,
        backgroundColor: 'negative01',
      }}
      title="Ton compte est désactivé"
      subtitle={`Tu as jusqu’au ${formattedDate} pour réactiver ton compte.`}
      buttonPrimary={{
        wording: 'Réactiver mon compte',
        isLoading: unsuspendIsLoading,
        onPress: onReactivationPress,
      }}
      buttonTertiary={{
        wording: 'Retourner à l’accueil',
        navigateTo: navigateToHomeConfig,
        onAfterNavigate: signOut,
        icon: PlainArrowPrevious,
      }}>
      <StyledBody>
        Une fois cette date passée, ton compte pass Culture sera définitivement supprimé.
...
