...
  status,
  onValidate,
}) => {
  return (
    <PageWithHeader
      shouldLimitWidth
      title="Informations personnelles"
      scrollChildren={
        <Summary
          title="Voici les informations que nous avons récupérées. Vérifie qu’elles sont correctes."
          data={[
            { title: 'Ton prénom', testID: 'validation-first-name', value: firstName },
            { title: 'Ton nom de famille', testID: 'validation-name', value: lastName },
...
