import { useNavigation } from '@react-navigation/native'
import { NativeStackScreenProps } from '@react-navigation/native-stack'
import React, { FunctionComponent } from 'react'

import { EmailSentGeneric } from 'features/auth/components/EmailSentGeneric'
import {
  RootStackParamList,
  UseNavigationType,
} from 'features/navigation/navigators/RootNavigator/types'
import { env } from 'libs/environment/env'
import { RightButtonText } from 'ui/components/headers/RightButtonText'
import { PageWithHeader } from 'ui/pages/PageWithHeader'

type Props = Pick<NativeStackScreenProps<RootStackParamList, 'ResetPasswordEmailSent'>, 'route'>

export const ResetPasswordEmailSent: FunctionComponent<Props> = ({ route }) => {
  const { goBack } = useNavigation<UseNavigationType>()
  return (
    <PageWithHeader
      shouldLimitWidth
      title="Oubli de mot de passe"
      shouldDisplayBackButton={false}
      RightButton={<RightButtonText onClose={goBack} wording="Quitter" />}
      scrollChildren={
        <EmailSentGeneric
          title="Clique sur le lien de réinitialisation reçu par e-mail"
          consultFaq={{ url: env.FAQ_LINK_RESET_PASSORD_EMAIL_NOT_RECEIVED }}
          email={route.params.email}
        />
      }
    />
  )
}
