appId: ${MAESTRO_APP_ID}
---
#ConfirmationEmailPage
- assertVisible: 'Confirme ton adresse e-mail'
- assertVisible: "Tu as reçu un lien à l’adresse\_:"
- assertVisible: ${MAESTRO_UNREGISTERED_EMAIL}
- assertVisible: 'L’e-mail peut prendre quelques minutes pour arriver.'
- tapOn: "Tu n‘as pas reçu de lien\_? Tu peux\_:"

- assertVisible: 'Consulter notre centre d’aide'
- assertVisible:
    id: 'Consulter mes e-mails'
- tapOn:
    id: 'Consulter mes e-mails'
