appId: app.passculture.staging
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow: src/features/identityCheck/FirstLaunch.yml # First Launch
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonMyProfile.yml
- runFlow: src/features/auth/ToLogin.yml # Se connecter
- runFlow: reusableFlows/ui/components/buttons/DoubleActionButtonConnect.yml
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonLater.yml
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonMyProfile.yml
- tapOn: "Informations personnelles"
- assertVisible:
    text: "Supprimer mon compte"
    index: 1
- tapOn: "Supprimer mon compte"
- runFlow: src/features/Profile/AccountDeletionConfirmationPage.yml
- tapOn: "Supprimer mon compte"
- runFlow: src/features/Profile/AccountDeletionPage.yml
- tapOn: "Retourner à l’accueil"
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonMyProfile.yml
- assertVisible: "Se connecter"
- runFlow: src/features/auth/ToLogin.yml
- runFlow: reusableFlows/ui/components/buttons/DoubleActionButtonConnect.yml
- runFlow: src/features/auth/AccountDeactivationPage.yml
- tapOn: "Réactiver mon compte"
- runFlow: src/features/auth/AccountReactivationPage.yml
- tapOn: "Découvrir le catalogue"
- assertVisible: "Bonjour Nicolas"
- assertVisible: "Tu as 300\_€ sur ton pass"
- tapOn: "Découvrir le catalogue"
- runFlow: reusableFlows/StopApp.yml # Stop App