appId: ${MAESTRO_APP_ID}
tags:
  - auth
onFlowStart:
  - runScript: ../common/deeplinks/DeepLink.js
---
- runFlow: ../common/lifecycle/LaunchApp.yml
- runFlow: ../common/lifecycle/StopApp.yml
- runFlow: ../common/deeplinks/DeeplinkToProfile.yml

- assertVisible: 'Mon profil'
- tapOn: 'Créer un compte'
- tapOn: 'S’inscrire avec mon e-mail'

- assertVisible: 'Crée-toi un compte'
- tapOn:
    id: 'Entrée pour l’email'
- inputText: ${MAESTRO_UNREGISTERED_EMAIL}
- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Crée-toi un compte' # Pour fermer le clavier iOS
- tapOn: 'J’accepte de recevoir les newsletters, bons plans et les recommandations personnalisées du pass Culture.'
- tapOn: 'Continuer vers l’étape Mot de passe'

- assertVisible: 'Choisis un mot de passe'
- tapOn:
    id: 'Mot de passe'
- inputText: ${MAESTRO_PASSWORD}
- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Choisis un mot de passe' # Pour fermer le clavier iOS

- tapOn: 'Quitter'
- tapOn: 'Abandonner l’inscription'
