appId: ${MAESTRO_APP_ID}
---
- assertVisible: 'Crée-toi un compte'
- tapOn: 'tonadresse@email.com'
- inputText: 'user@gmal.com'
- assertVisible: "Veux-tu plutôt dire user@gmail.com\_?"
- tapOn: 'Appliquer la modification'
- tapOn: 'J’accepte de recevoir les newsletters, bons plans et recommandations personnalisées du pass Culture.'
- tapOn: 'Continuer vers l’étape Mot de passe'

- assertVisible: 'Mot de passe'
- tapOn: 'Ton mot de passe'
- inputText: 'user@AERTY123'
- tapOn: 'Continuer vers l’étape Date de naissance'

- assertVisible: 'Date de naissance'
- tapOn:
    point: '75%, 70%'
# TODO: Trouver un moyen de scroll dans le carrousel
- tapOn: 'Continuer vers l’étape CGU & Données'

- assertVisible: 'CGU & Données'
- tapOn: 'Accepter les conditions générales d’utilisation et la politique de confidentialité pour s’inscrire'

- assertVisible: 'Confirme ton adresse e-mail'
- tapOn: 'Consulter notre centre d’aide'
- assertVisible: "[Jeunes] Je n'ai pas reçu le mail de confirmation de création de compte"
- tapOn: 'Revenir à pass Culture T'
- assertVisible: 'Confirme ton adresse e-mail'
