appId: ${MAESTRO_APP_ID}
---
#IdCheckPage
- assertVisible: "Vérifie ton identité pour débloquer ton crédit"
- assertVisible: "Nous avons besoin de vérifier ton identité. Si tu es éligible tu pourras bénéficier de l’aide financière de l’État."
- assertVisible: "Assure-toi que toutes les informations que tu nous transmets sont correctes pour faciliter ton inscription."

- assertVisible:
      id: "Commencer la vérification"

- assertVisible: "Vérifier mon identité plus tard"
- tapOn:
      id: "Commencer la vérification"


